      res->ai_canonname, so seeding the host name from DNS failed. This
      appears to have been a bug in earlier versions of glibc, since POSIX
      says: "A numeric host address string is not a 'name', and thus does
      not have a 'canonical name' form; no address to host name translation
      is performed." Use getnameinfo() instead.
    
 -- Christian Perrier <bubulle@debian.org>  Wed, 16 Mar 2005 20:12:48 +0100

netcfg (1.08) unstable; urgency=low

  * Joshua Kwan
    - Ask for nameserver information if the DHCP server did not provide
      any. closes: #281924
    - Pass broadcast parameter to ip because it doesn't actually set it.
      Generally harmless, but we crash DSL modems now. closes: #295482
    - Fix some translation issues with Choices.
  * Joey Hess
    - If heuristics fail to determine a default interface, use the first
      interface as the default.
    - Back up netcfg/choose_interface preseeded value, and if the question
      is not displayed to the user, restore that value, overriding the
      selected default interface. Unless it was preseeded to "auto", then we
      use the selected default interface anyway.
    - That should make interface preseeding work in all situations.
      Closes: #293682

 -- Joshua Kwan <joshk@triplehelix.org>  Wed, 16 Feb 2005 21:44:33 -0800

netcfg (1.07.1) unstable; urgency=low

  * Joshua Kwan
    - Fix adhoc -> ad-hoc typo in dhcp.c. (closes: #282407)
  * Christian Perrier
    - Add a note to translators about the maximum length of
      individual Choices translations for Select templates
  * Includes fixes for substitutions in translated templates.
  * Updated translations: 
    - Bosnian (bs.po) by Safir Šećerović
    - Catalan (ca.po) by Jordi Mallach
    - Czech (cs.po) by Miroslav Kure
    - Danish (da.po) by Claus Hindsgaul
    - German (de.po) by Dennis Stampfer
    - French (fr.po) by French Team
    - Korean (ko.po) by Changwoo Ryu
    - Lithuanian (lt.po) by Kęstutis Biliūnas